--- a/Week-9/todo-list/src/Pages/Home.css
+++ b/Week-9/todo-list/src/Pages/Home.css
@@ -6,3 +6,11 @@ body {
 	text-align: center;
 	padding: 15px 0px;
 }
+.invisible {
+	display: none;
+}
+fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
